added few changes in index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-
+    <head>
+       <h1>Recipes </h1>
+    </head>
+<body>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio a repudiandae blanditiis nulla, error molestiae, modi facilis, libero incidunt beatae optio! Deleniti nobis minima ullam suscipit dignissimos ratione eum unde?</body>
 </html>
