--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-       <h1>Recipes </h1>
+       <h1>Recipes By Krishna </h1>
     </head>
 <body>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio a repudiandae blanditiis nulla, error molestiae, modi facilis, libero incidunt beatae optio! Deleniti nobis minima ullam suscipit dignissimos ratione eum unde?</body>
 </html>
