--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-       <h1>Recipes By Krishna </h1>
+    <head><meta charset="UTF-8">
+       <h1>Paneer Recipes</h1>
     </head>
-<body>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio a repudiandae blanditiis nulla, error molestiae, modi facilis, libero incidunt beatae optio! Deleniti nobis minima ullam suscipit dignissimos ratione eum unde?</body>
+<h2><a href="file:///home/cooster/repos/git_recipes/odin-recipes/pbm.html" target="_blank" rel="noopener noreferrer">Paneer Butter Masala</a><br></h2>
+<h2><a href="file:///home/cooster/repos/git_recipes/odin-recipes/plkp.html" target="_blank" rel="noopener noreferrer">Palak Paneer</a><br></h2>
+<h2><a href="file:///home/cooster/repos/git_recipes/odin-recipes/kdp.html" target="_blank" rel="noopener noreferrer">Kadai Paneer</a></h2>
 </html>
